--- a/app/src/main/res/layout/activity_register_step3.xml
+++ b/app/src/main/res/layout/activity_register_step3.xml
@@ -17,7 +17,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_arrow_back"
-            android:contentDescription="Назад"
+            android:contentDescription="@string/back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -26,10 +26,10 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Создать аккаунт"
+            android:text="@string/create_acc"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#1A1A1A"
+            android:textColor="@color/darkGray"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@drawable/ic_profile_placeholder"
-            android:contentDescription="Фото профиля"
+            android:contentDescription="@string/acc_photo"
             android:scaleType="centerCrop"
             android:clickable="true"
             android:focusable="true"
@@ -61,24 +61,24 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину"
+            android:text="@string/acc_photo_hint"
             android:layout_marginBottom="14dp"
             android:textSize="13sp"
-            android:textColor="#1A1A1A"/>
+            android:textColor="@color/darkGray"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Номер водительского удостоверения"
+            android:text="@string/driver_license_number"
             android:textSize="14sp"
-            android:textColor="#404040"/>
+            android:textColor="@color/gray"/>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             app:boxBackgroundMode="outline"
-            app:boxStrokeColor="#D0D5DD"
-            android:textColorHint="#667085"
+            app:boxStrokeColor="@color/lightGrey"
+            android:textColorHint="@color/blueGray"
             app:boxCornerRadiusTopStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
@@ -87,7 +87,7 @@
                 android:id="@+id/etLicense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="0000000000"
+                android:hint="@string/driver_license_number_hint"
                 android:paddingVertical="12dp"
                 android:inputType="text"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -95,41 +95,41 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Дата выдачи"
+            android:text="@string/date_of_issue"
             android:textSize="14sp"
-            android:textColor="#404040"/>
+            android:textColor="@color/gray"/>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/licenseDateLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             app:boxBackgroundMode="outline"
-            app:boxStrokeColor="#D0D5DD"
-            android:textColorHint="#667085"
+            app:boxStrokeColor="@color/lightGrey"
+            android:textColorHint="@color/blueGray"
             app:boxCornerRadiusTopStart="8dp"
             app:boxCornerRadiusTopEnd="8dp"
             app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusBottomEnd="8dp"
             app:startIconDrawable="@drawable/ic_calendar"
-            app:startIconTint="#2A1246">
+            app:startIconTint="@color/violet">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etLicenseDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="DD/MM/YYYY"
+                android:hint="@string/date_hint"
                 android:paddingStart="40dp"
                 android:paddingVertical="12dp"
-                android:focusable="false"
+                android:focusable="true"
                 android:clickable="true"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Загрузите фото водительского удостоверения"
+            android:text="@string/upload_driver_license"
             android:textSize="14sp"
-            android:textColor="#404040"
+            android:textColor="@color/gray"
             android:layout_marginBottom="4dp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -143,7 +143,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/ic_upload"
-                android:contentDescription="Загрузить фото"
+                android:contentDescription="@string/upload_photo"
 
                 android:clickable="true"
                 android:focusable="true"/>
@@ -151,18 +151,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Загрузить фото"
+                android:text="@string/upload_photo"
                 android:textSize="14sp"
-                android:textColor="#667085"
+                android:textColor="@color/blueGray"
                 android:layout_marginStart="12dp"/>
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Загрузите фото паспорта"
+            android:text="@string/upload_passport"
             android:textSize="14sp"
-            android:textColor="#404040"
+            android:textColor="@color/gray"
             android:layout_marginBottom="4dp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -176,16 +176,16 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/ic_upload"
-                android:contentDescription="Загрузить фото"
+                android:contentDescription="@string/upload_photo"
                 android:clickable="true"
                 android:focusable="true"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Загрузить фото"
+                android:text="@string/upload_photo"
                 android:textSize="14sp"
-                android:textColor="#667085"
+                android:textColor="@color/blueGray"
                 android:layout_marginStart="12dp"/>
         </LinearLayout>
 
@@ -195,8 +195,8 @@
         android:id="@+id/btnNext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Далее"
-        android:backgroundTint="#2A1246"
+        android:text="@string/next"
+        android:backgroundTint="@color/violet"
         app:cornerRadius="8dp"
         android:layout_marginBottom="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
