--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="52dp"
-        android:text="DriveNext"
-        android:textColor="#2A1246"
+        android:text="@string/app_name"
+        android:textColor="@color/violet"
         android:textSize="24sp"
         android:textStyle="bold"/>
 
@@ -20,9 +20,9 @@
         android:id="@+id/tvSlogan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Поможем найти твою следующую поездку"
+        android:text="@string/slogan_1"
         android:textSize="14sp"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:alpha="0.7"
         android:gravity="center"/>
 
@@ -33,6 +33,6 @@
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
         android:src="@drawable/ic_splash_screen"
-        android:contentDescription="Логотип DriveNext"
+        android:contentDescription="@string/app_logo"
         android:layout_marginBottom="32dp"/>
 </LinearLayout>
