--- a/app/src/main/res/layout/onboarding_2.xml
+++ b/app/src/main/res/layout/onboarding_2.xml
@@ -8,8 +8,8 @@
         android:id="@+id/btnSkip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Пропустить"
-        android:textColor="#2A1246"
+        android:text="@string/skip"
+        android:textColor="@color/violet"
         android:textSize="14sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -35,7 +35,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Безопасно и удобно"
+            android:text="@string/onboarding_title_2"
             android:textSize="24sp"
             android:textStyle="bold"
             android:gravity="start"
@@ -45,16 +45,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Арендуй автомобиль и наслаждайся его удобством"
-            android:textSize="14dp"
-            android:textColor="#1A1A1A"
+            android:text="@string/onboarding_slogan_2"
+            android:textSize="14sp"
+            android:textColor="@color/darkGray"
             android:gravity="start"
             android:paddingHorizontal="36dp"
             android:layout_marginBottom="32dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="36dp"
@@ -64,6 +62,7 @@
                 android:id="@+id/imageOnboarding"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/onboarding_content_2"
                 android:src="@drawable/ic_onboarding_lines_2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -73,10 +72,10 @@
                 android:id="@+id/btnNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#2A1246"
+                android:backgroundTint="@color/violet"
                 app:cornerRadius="8dp"
                 android:paddingHorizontal="42dp"
-                android:text="Далее"
+                android:text="@string/next"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
