--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="violet">#FF2A1246</color>
+    <color name="lightGrey">#FFD0D5DD</color>
+    <color name="darkGray">#FF1A1A1A</color>
+    <color name="blueGray">#FF667085</color>
+    <color name="gray">#FF404040</color>
 </resources>
