--- a/app/src/main/res/layout/fragment_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_onboarding_1.xml
@@ -36,6 +36,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="@string/onboarding_title_1"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -73,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/violet"
+                android:textColor="@color/white"
                 app:cornerRadius="8dp"
                 android:paddingHorizontal="42dp"
                 android:text="@string/next"
