--- a/app/src/main/res/layout/fragment_onboarding_3.xml
+++ b/app/src/main/res/layout/fragment_onboarding_3.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="24dp">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/btnSkip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
         android:text="@string/skip"
         android:textColor="@color/violet"
         android:textSize="14sp"
