feat(auth): implement navigation from onboarding to login and complete registration steps

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,5 +49,72 @@
     <fragment
         android:id="@+id/gettingStartedFragment"
         android:name="com.example.drivenextapp.ui.GettingStartedFragment"
-        android:label="Getting started" />
+        android:label="Getting started">
+        <action
+            android:id="@+id/action_gettingStartedFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_gettingStartedFragment_to_signUpFragment1"
+            app:destination="@id/signUpFragment1" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.drivenextapp.ui.LoginFragment"
+        android:label="Log in">
+        <action
+            android:id="@+id/action_loginFragment_to_signUpFragment1"
+            app:destination="@id/signUpFragment1" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signUpFragment1"
+        android:name="com.example.drivenextapp.ui.SignUpFragment1"
+        android:label="Sign up 1">
+        <action
+            android:id="@+id/action_signUpFragment1_to_signUpFragment2"
+            app:destination="@id/signUpFragment2" />
+        <action
+            android:id="@+id/action_signUpFragment1_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signUpFragment2"
+        android:name="com.example.drivenextapp.ui.SignUpFragment2"
+        android:label="Sign up 2">
+        <action
+            android:id="@+id/action_signUpFragment2_to_signUpFragment3"
+            app:destination="@id/signUpFragment3" />
+        <action
+            android:id="@+id/action_signUpFragment2_to_signUpFragment1"
+            app:destination="@id/signUpFragment1" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signUpFragment3"
+        android:name="com.example.drivenextapp.ui.SignUpFragment3"
+        android:label="Sign up 3">
+        <action
+            android:id="@+id/action_signUpFragment3_to_signUpSuccessFragment"
+            app:destination="@id/signUpSuccessFragment" />
+        <action
+            android:id="@+id/action_signUpFragment3_to_signUpFragment2"
+            app:destination="@id/signUpFragment2" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signUpSuccessFragment"
+        android:name="com.example.drivenextapp.ui.SignUpSuccessFragment"
+        android:label="Sign up success">
+        <action
+            android:id="@+id/action_signUpSuccessFragment_to_signUpFragment3"
+            app:destination="@id/signUpFragment3" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/homepageFragment"
+        android:name="com.example.drivenextapp.ui.HomepageFragment"
+        android:label="Homepage">
+    </fragment>
 </navigation>
