--- a/app/src/main/res/layout/fragment_getting_started.xml
+++ b/app/src/main/res/layout/fragment_getting_started.xml
@@ -41,11 +41,11 @@
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/violet"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/violet"
         android:text="@string/log_in"
-        android:textSize="16sp"
         android:textColor="@android:color/white"
+        android:textSize="16sp"
         app:cornerRadius="8dp" />
 
     <com.google.android.material.button.MaterialButton
@@ -54,9 +54,9 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:text="@string/register"
-        android:textSize="16sp"
         android:textColor="@color/violet"
+        android:textSize="16sp"
+        app:cornerRadius="8dp"
         app:strokeColor="@color/lightGrey"
-        app:strokeWidth="1dp"
-        app:cornerRadius="8dp" />
+        app:strokeWidth="1dp" />
 </LinearLayout>
