fix(layout): fix colors

--- a/app/src/main/res/layout/fragment_sign_up_3.xml
+++ b/app/src/main/res/layout/fragment_sign_up_3.xml
@@ -196,6 +196,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/violet"
+        android:textColor="@color/white"
         android:text="@string/next"
         app:cornerRadius="8dp"
         android:layout_marginBottom="14dp"
