--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -55,6 +55,7 @@
             android:textColor="@color/gray"/>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundMode="outline"
@@ -142,7 +143,7 @@
             android:text="@string/agreement"
             android:textSize="12sp"
             android:textColor="@color/darkGray"
-            app:buttonTint="@color/lightGrey"
+            app:buttonTint="@color/violet"
             android:layout_marginBottom="24dp"/>
 
     </LinearLayout>
