chore: minor fixes and adjustments

--- a/app/src/main/res/layout/fragment_getting_started.xml
+++ b/app/src/main/res/layout/fragment_getting_started.xml
@@ -43,8 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="@string/log_in"
-        android:textSize="16sp"
-        app:cornerRadius="8dp" />
+        android:textSize="16sp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnRegister"
@@ -54,7 +53,6 @@
         android:textColor="@color/violet"
         android:text="@string/register"
         android:textSize="16sp"
-        app:cornerRadius="8dp"
         app:strokeColor="@color/lightGrey"
         app:strokeWidth="1dp" />
 </LinearLayout>
