feat: make all fields on sign-up step 3 functional

--- a/app/src/main/res/layout/fragment_sign_up_3.xml
+++ b/app/src/main/res/layout/fragment_sign_up_3.xml
@@ -73,6 +73,7 @@
             android:textSize="14sp"
             android:textColor="@color/gray"/>
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/licenseLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundMode="outline"
